2003-02-17  Petr Stehlik  <pstehlik@sophics.cz>
* debian/ folder with deb scripts added (taken from official Atari800
  debian package created by Dale Scheetz)

2003-02-11  Vasyl Tsvirkunov  <vasyl@pacbell.net>
* antic.c: added missing guard around extern reference
* mzpokeysnd.c: C standard compliance fix
* wince\*: WinCE/PocketPC updated

** tagged as 1.3.0

2003-02-10  Petr Stehlik  <pstehlik@sophics.cz>

* pokey.c, monitor.c: added include. Interesting is that my compiler at
  home hasn't complained but the gcc-3.2.2 here at work was uncompromising.
* atari.c: "--help", "--usage" and "--version" recognized now, though the
  former two just ask user to type "-help" again.
* pokeysnd.[ch]: fixed typo errors
* configure.in: alternate user and system-wide config file names for DOS
  and TOS ($HOME/atari800.cfg and C:\atari800.cfg) since their filesystem
  is still limited to 8+3 filenames.
* win32/sound.c: restored original behaviour of "-quality" switch.
* atari800.man: version increased, SDL option "-audio16" added.
* win32/sound.c: "-bit16" renamed to "-audio16" to be in sync with SDL port
* emuos.h: finally updated with proper URL
* most files in DOC folder updated with minor fixes

2003-02-09  Petr Stehlik  <pstehlik@sophics.cz>

* pokey.[ch]: 'stereo_enabled' variable moved to rt-config.c
* prompts.[ch]: YesNo() renamed to GetYesNo() and added GetYesNoAsInt()
  that allows user to enter Y/N in the RtConfigUpdate process
* rt-config.c: added 'enable_new_pokey'
  * added "ENABLE_NEW_POKEY" and "STEREO_POKEY" config options
  * removed all the code for backward compatibility since it could cause
    confusion if both old and new option existed in one config file
  * updated for GetYesNoAsInt() prompt
  * completely reworked the way the config file is searched for on disk:
    now it first tries in user's $HOME folder file named ".atari800.cfg"
    (which is configurable at compile-time) and later it falls back